dig-src/main/default/objects/Membership_Term__c/Membership_Term__c.object-meta.xml
<CustomObject>
    <label>Membership Term</label>
    <nameField>
        <displayFormat>TERM-{0000000}</displayFormat>
        <label>Term Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>