dig-src/main/default/objects/Membership_Term__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <label>Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipName>ReceiptTerms</relationshipName>
    <type>Lookup</type>
</CustomField>