dig-src/main/default/objects/Membership_Term__c/fields/Renewal_Count__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Count__c</fullName>
    <label>Renewal Count</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>