dig-src/main/default/objects/Membership_Term__c/fields/Term_End__c.field-meta.xml
<CustomField>
    <fullName>Term_End__c</fullName>
    <label>Term End</label>
    <required>true</required>
    <type>Date</type>
</CustomField>