dig-src/main/default/objects/Membership_Term__c/fields/Term_Start__c.field-meta.xml
<CustomField>
    <fullName>Term_Start__c</fullName>
    <label>Term Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>